<resources>
    <string name="action_settings">Settings</string>
    <string name="room_status">status</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="turn_speaker_on">Speaker ON</string>

    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="photo">+ Photo</string>
    <string name="add_isssues">Add Isssues</string>
    <string name="return_to_main_menu"> Return to Main Menu </string>
    <string name="stay_healthy">\"Stay Healthy\"</string>
    <string name="thank_you">Thank you</string>
    <string name="book">Book</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="enter_code">Enter code</string>
    <string name="time">TIME</string>
    <string name="amount">Amount</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="reset">Reset</string>
    <string name="code">code</string>
    <string name="country_code">+91</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="age">age</string>
    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="continues">Continue</string>
    <string name="yearss">Years</string>
    <string name="edit_username">Edit Username</string>
    <string name="update_username">Update Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="update_age">Update Age</string>
    <string name="enter_age">Enter Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="Images_has_been_uploaded_successfully">Images has been uploaded successfully</string>
    <string name="have_not_picked_image">You haven\'t picked Image</string>
    <string name="payment_unsuccessful">Payment Unsuccessful</string>
    <string name="retry">Retry</string>
    <string name="enter_valid_code">Enter valid code</string>
    <string name="redirecting">redirecting........</string>
    <string name="invalid">Invalid code.</string>
    <string name="cannot_be_empty">Cannot be empty.</string>
    <string name="cant_send_code">Cant send code</string>
    <string name="hindi">हिंदी</string>
    <string name="join">Join</string>
    <string name="pref_title_audio_codec">jopref_title_audio_codecin</string>
    <string name="pref_title_video_codec">pref_title_video_codec</string>
    <string name="vp8_simulcast">vp8_simulcast</string>
    <string name="sender_bandwidth_constraints">sender_bandwidth_constraints</string>
    <string name="max_audio_bitrate">max_audio_bitrate</string>
    <string name="max_video_bitrate">max_video_bitrate</string>
    <string name="doctor">Doctor</string>
    <string name="others">Others</string>
    <string name="history">History</string>

</resources>
