<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doctor_background"
    android:orientation="vertical"
    android:weightSum="4">


    <ImageView
        android:id="@+id/icon"
        style="@style/ThemeOverlay.FirebaseIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/doctor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />
      <!---
    <TextView
        android:id="@+id/status"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signed_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/detail"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="213dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        tools:text="Firebase User ID: 123456789abc" />
                                                    -->
    <EditText
        android:id="@+id/fieldPhoneNumber"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_weight="1.0"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:inputType="phone"
        android:text="@string/country_code"
        android:textColor="@color/textcolour"
        android:textColorHighlight="#003A2E2E"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStartVerification"
        app:layout_constraintEnd_toEndOf="@+id/fieldVerificationCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fieldVerificationCode"
        app:layout_constraintTop_toTopOf="@+id/buttonStartVerification"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/fieldVerificationCode"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:layout_weight="1.0"
        android:background="@drawable/edittext"

        android:inputType="number"

        android:textColor="@color/textcolour"
        android:textColorHint="@color/textcolour"
        app:layout_constraintBottom_toBottomOf="@+id/buttonVerifyPhone"
        app:layout_constraintEnd_toStartOf="@+id/buttonVerifyPhone"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonVerifyPhone"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonStartVerification"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/textcolour"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1.0"

        android:background="@drawable/buttonbackground"
        android:text="@string/send"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toTopOf="@+id/buttonVerifyPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />

    <Button
        android:id="@+id/buttonVerifyPhone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/buttonbackground"
        android:layout_weight="1.0"
        android:text="@string/verify"
        android:textColor="@color/textcolour"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <Button
        android:id="@+id/buttonResend"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1.0"
        android:background="@drawable/buttonbackground"
        android:text="@string/resend"
        android:textColor="@color/textcolour"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toTopOf="@+id/signOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signOutButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"

        android:layout_weight="1.0"
        android:background="@drawable/buttonbackground"
        android:text="@string/sign_out"
        android:textColor="@color/textcolour"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonResend"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonResend"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />


</android.support.constraint.ConstraintLayout>

